syntax = "proto3";

option go_package = "github.com/kallepan/protobuf/proto.greet.v1;greetpb";

package proto.greet.v1;

service GreetService {
    rpc HelloWorld(NoParam) returns (HelloResponse) {}

    rpc HelloWorldServerStreaming(NamesList) returns (stream HelloResponse) {}

    rpc HelloWorldClientStreaming(stream HelloRequest) returns (MessagesList) {}

    rpc HelloWorldBidirectionalStreaming(stream HelloRequest) returns (stream HelloResponse) {}
}

message NoParam {}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message NamesList {
    repeated string names = 1;
}

message MessagesList {
    repeated string messages = 1;
}
